--- a/store/blocks/sliders.jsonc
+++ b/store/blocks/sliders.jsonc
@@ -5,42 +5,42 @@
       "height":720,
       "images": [
         {
-          "image": "/arquivos/banner-regalos.jpg",
-          "mobileImage": "/arquivos/banner-regalos-mobile.jpg",
+          "image": "/arquivos/test-rodilleras24-01-22.jpg",
+          "mobileImage": "/arquivos/test-rodilleras-mobile24-01-22.jpg",
           "link": {
-            "url": "/269?map=productClusterIds&order=OrderByBestDiscountDESC"
+            "url": "https://blog.montenbaik.com/2022/01/test-rodilleras-sixsixone-recon-adv/"
           },
           "blockClass":"slider-home"
         },
         {
-          "image": "/arquivos/banner-nuevas-marcas.jpg",
-          "mobileImage": "/arquivos/banner-nuevas-marcas-mobile.jpg",
+          "image": "/arquivos/dharco_24-01-2022.jpg",
+          "mobileImage": "/arquivos/dharco_mobile24-01-2022.jpg",
           "link": {
-            "url": "/Vestuario/Blusas-y-poleras/Blusa"
+            "url": "/dharco/troy-lee-designs?initialMap=b&initialQuery=dharco&map=brand,brand"
           },
           "blockClass":"slider-home"
         },
         {
-          "image": "/arquivos/guia-navidena.jpg",
-          "mobileImage": "/arquivos/guia-navidena-mobile.gif",
+          "image": "/arquivos/explora_24-01-22.jpg",
+          "mobileImage": "/arquivos/explora_mobile24-01-22.jpg",
           "link": {
-            "url": "/kalisson?_q=kalisson&map=ft"
+            "url": "/programa-especializado-5-dias-4-noches/p"
           },
           "blockClass":"slider-home"
         },
         {
-          "image": "/arquivos/recien-llegados.jpg",
-          "mobileImage": "/arquivos/recien-llegados-mobile.jpg",
+          "image": "/arquivos/entrevista-flo-24-01-22.jpg",
+          "mobileImage": "/arquivos/entrevista-flo-mobile24-01-22.jpg",
           "link": {
-            "url": "/Vestuario/Blusas-y-poleras/Blusa"
+            "url": "/dharco?order=OrderByReleaseDateDESC"
           },
           "blockClass":"slider-home"
         },
         {
-          "image": "/arquivos/neumaticos.jpg",
-          "mobileImage": "/arquivos/neumaticos-mobile.jpg",
+          "image": "/arquivos/pivot-24-01-22.jpg",
+          "mobileImage": "/arquivos/pivot-mobile24-01-22.jpg",
           "link": {
-            "url": "/Vestuario/Blusas-y-poleras/Blusa"
+            "url": "/ciclismo/bicicletas-y-cuadros/pivot/prime/143?initialMap=productClusterIds&initialQuery=143&map=category-1,category-2,brand,brand,productClusterIds"
           },
           "blockClass":"slider-home"
         }
