ajuste en relacion aspecto en mobile + margen y orden de vitrina en pdp + cambio imagen en landing de inscripciones

--- a/store/blocks/landings/eventos.jsonc
+++ b/store/blocks/landings/eventos.jsonc
@@ -18,7 +18,7 @@
         "height":720,
         "images": [
           {
-            "image": "/arquivos/test-rodilleras24-01-22.jpg",
+            "image": "/arquivos/Banner-inscripciones-fecha-2-09-02-22.png",
             "mobileImage": "/arquivos/test-rodilleras-mobile24-01-22.jpg",
             "link": {
               "url": "/269?map=productClusterIds&order=OrderByBestDiscountDESC"
