--- a/store/blocks/productos/shelf.jsonc
+++ b/store/blocks/productos/shelf.jsonc
@@ -71,6 +71,9 @@
   },
   "product-summary-image": {
     "props": {
+      "aspectRatio": {
+        "mobile": "4:3"
+      },
       "hoverImage": {
         "criteria": "index",
         "index": 1
