--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "sass": "sass --watch --no-source-map styles/scss:styles/css"
+    "sass": "sass --watch --no-source-map styles/scss:styles/css",
+    "vlink": "concurrently \"vtex link\" \"npm run sass\" \"vtex browse\""
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "homepage": "https://gitlab.com/propulsow/clients/montenbaikcl#readme",
   "devDependencies": {
     "node-sass": "^6.0.1"
+  },
+  "dependencies": {
+    "concurrently": "^7.0.0"
   }
 }
