sku-selector carga no empty

--- a/store/blocks/productos/shelf.jsonc
+++ b/store/blocks/productos/shelf.jsonc
@@ -176,7 +176,7 @@
       "showVariationsLabels": ["false"],
       "displayMode": "slider",
       "blockClass": "selector",
-      "initialSelection": "empty",
+      //"initialSelection": "empty",
       "sliderItemsPerPage": {
         "desktop": 3,
         "tablet": 2,
